SERVER-32118 Fix the parsing option for applyOps view creation & clean up createCollectionForApplyOps logic

(cherry picked from commit be4f0b55fd46c20c3dfdf73140a48384b3d0699c)